2016/08/22 v99
	1. Add item level for equipment in the container buttons.
	2. Add seperate for containers in one view.
	3. You can use R in the view manager to change the name.

2016/08/22 v98
	1. Esc will close the container and bank correctly.
	2. Fix the used/total info of the container display 0/0.

2016/08/22 v97
	1. Bank view system added, works like the container view system.

2016/8/14 v96
	1. Add border color for poor item

2016/8/14 v95
	1. Add a condition for container view system, modify the save format, reset the view system's settings.

2016/8/14 v94
	1. Fix label name when edit the item in the view mananger's treeview.

2016/8/14 v93
	1. You can modify anchor points for all elements, used for auto-fit for any resolution.
	2. Container View system added.

2016/8/4 v92
	1. Fix can't right-click to cancel the buff.
	2. Apply a border to the buff icons.

2016/8/4 v91
	1. Fix the tip show double times for some items and talents.

2016/8/3 v90
	1. Fix error for adding information on GameTooltip with recipes.

2016/8/03 v89
	1. Change the action button's style, fix the icon border, it'll looks more better.

2016/8/02 v88
	1. Use alt+right-mouse will put the auto-gen item buttons' item into black list, so it won't be generated.

2016/8/02 v87
	1. Fix the free mode for action bars, the action buttons would alsways be square.

2016/8/02 v86
	1. Fix the buff frame's pos changed by the system.

2016/8/02 v85
	1. Fix the buff frame don't display in correct position.

2016/8/01 v84
	1. Fix the minimap resize display error.

2016/7/31 v83
	1. The unit watch panel now generate frames from bottom to top.

2016/7/31 v82
	1. Minimap can be moved and resized.
	2. nameplateN id can be used in unit watch panel without problem.
	3. Update for IGAS v101.

2016/7/28 v81
	1. Fix a code error.

2016/7/27 v80
	1. The nameplates now can display information about target change and threat level.

2016/7/27 v79