@@ -574,3 +574,6 @@ L["BankBag7"] = "银行扩展背包7"
 L["The slot is in the 7th bank bag"] = "物品槽在银行扩展背包7中"
 L["IsNewItem"] = "新物品"
 L["The slot has item, and the item is newly added."] = "物品槽中有物品存在，并且该物品是新加入的"
+
+L["IsEquipSet"] = "装备配置方案中"
+L["The slot has item, and the item is in a equip set."] = "物品槽中有物品存在，并且该物品属于某个装备配置方案"
